# fntldr

./: Cargo.toml  README.md  rustfmt.toml
src/: app.rs  font.rs  main.rs  ssa.rs  system.rs  utils.rs
src/app/: cli.rs  functions.rs
src/system/: linux.rs  windows.rs
