[package]
name = "fntldr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
ass-core = "0.1.1"
bincode = "2.0.1"
clap = { version = "4.5.47", features = ["derive"] }
ctrlc = { version = "3.5.0", features = ["termination"] }
dirs = "6.0.0"
memmap2 = "0.9.8"
regex = "1.11.2"
tempfile = "3.22.0"
ttf-parser = "0.25.1"

[target.'cfg(target_os = "linux")'.dependencies]
yeslogic-fontconfig-sys = "6.0.0"
