[package]
name = "fntldr"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ass-core = "0.1.1"
bincode = "2.0.1"
clap = { version = "4.5.53", features = ["derive"] }
ctrlc = { version = "3.5.1", features = ["termination"] }
dirs = "6.0.0"
memmap2 = "0.9.9"
regex = "1.12.2"
tempfile = "3.23.0"
ttf-parser = "0.25.1"

[target.'cfg(target_os = "linux")'.dependencies]
yeslogic-fontconfig-sys = "6.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Graphics_Gdi"] }

[lints.clippy]
unwrap-used = "deny"
expect-used = "deny"
